# eternity2

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.envoy.abel.yaml  docker-compose.grpc.only.yaml  docker-compose.local.secure.yaml  docker-compose.yaml  package-lock.json  package.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  docker-bp-api.yaml  docker-bp-base.yaml  docker-bp-envoy.yaml  docker-bp-frontend.yaml  docker-build-envoy.yaml  docker-build-envoy2.yaml  docker-build-push.yaml  docker-build-scheduler.yaml  docker-build.yaml  docker-dependencies.yaml  docker.yaml
.old/bidouille_algo/: spiral.py  spiral_clean.py
.old/gui/: .gitignore  requirements.txt
.old/gui/bucas/: bucas_e2_pieces.py  conf_bucas.js  create_official_pieces_set.py  draw_patterns.py
.old/gui/eternity2/: official_puzzle_set.py  pattern_svg_definition.py
.old/gui/eternitylib/: generation.py  pattern.py
.old/gui/eternitylib/get_true_pieces/: main.py
.old/gui/scheduler/: README.md  main.py  solve.py  solve_eternity.py
.old/gui/solverlib/: algorithm_enum.py  solver.py
.old/gui/statiscticslib/: grapher.py  result.py  runner.py
api/: CMakeLists.txt  Dockerfile  main.cpp
api/proto/: CMakeLists.txt
api/proto/helloworld/v1/: greeter.proto
api/proto/solver/v1/: solver.proto
api/solver/: solvera.cpp  solvera.h
bidouille_algo/: spiral_clean.py
board-generator/: board-generator.py
build-base/: Dockerfile
envoy/: Dockerfile  docker-entrypoint.sh  envoy.yaml
envoy2/: Dockerfile  envoy.yaml
external-libs/CLI11/: CMakeLists.txt
external-libs/csv/: CMakeLists.txt
external-libs/spdlog/: CMakeLists.txt
external-libs/spdlog/spdlog/fmt/bundled/: core.h
get_true_pieces/: hint.json  source.txt
gui/: .gitignore  average_results.csv  logger.py  main.py  requirements.txt  results.csv
gui/bucas/: Bucas.py
gui/common_boards/: real_board.py
gui/eternity2/: direction.py  official_patterns.py  pattern.py  pattern_svg_definition.py  pattern_utils.py  piece.py
gui/eternitylib/: board.py  generation.py  pattern.py  piece.py
gui/eternitylib/get_true_pieces/: parsed_data.json
gui/scheduler/: Dockerfile  README.md  eternity2.json  main.py  requirements.txt  solve.py  solve_eternity.py
gui/scheduler/solver/v1/: solver_pb2.py  solver_pb2.pyi  solver_pb2_grpc.py
gui/solverlib/: execution.py  solver.py
gui/statiscticslib/: grapher.py  runner.py
react-frontend/: Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  vite.config.ts
react-frontend/src/: App.tsx  Board.tsx  Dashboard.tsx  Piece.tsx  RootLayout.tsx  Test.tsx  listItems.tsx  logic.tsx  main.tsx  theme.tsx
react-frontend/src/components/: Board.tsx  Piece.tsx  ResponsiveAppBar.tsx  piece.tsx
react-frontend/src/damien/: App.tsx  Board.tsx  Dashboard.tsx  logic.tsx
react-frontend/src/pages/homepage/: HomePage.tsx
react-frontend/src/pages/pathCreator/: CreatePathForm.tsx  DisplayPathForm.tsx  GridSelector.tsx  PathCreator.tsx  PathCreatorForm.tsx  atom.ts
react-frontend/src/pages/pathCreator/components/: GridSelector.css  GridSelector.tsx
react-frontend/src/pages/pathManager/: CreatePathForm.tsx  DisplayPathForm.tsx  PathManager.tsx  PathManagerGrid.tsx  PathManagerTabs.tsx  atom.ts  utils.ts
react-frontend/src/pages/requestForm/: RequestForm.tsx  atoms.ts
react-frontend/src/pages/solver/: Solver.tsx  Solving.tsx  SolvingMultiServer.tsx  SolvingStepByStep.tsx  Stats.tsx  StatsStepByStep.tsx  atoms.ts
react-frontend/src/pages/statistics/: Graph.tsx  RequestFormStatistics.tsx  SatisticSolver.tsx  StatisticsSolver.tsx  atoms.ts
react-frontend/src/proto/solver/v1/: solver.client.ts  solver.ts
react-frontend/src/proto2/: flightradar.client.ts  flightradar.ts
react-frontend/src/utils/: Constants.tsx  EternityPattern.tsx  OfficialEternity2.tsx  interface.tsx  logic.tsx  utils.tsx
solver/: CMakeLists.txt  main.cpp
solver/board/: board.cpp  board.h  scan_row.cpp  scan_row.h  scan_utils.cpp  scan_utils.h  spiral.cpp  spiral.h
solver/format/: format.cpp  format.h
solver/hash_load_store/: hash_store_load.cpp  hash_store_load.h
solver/piece/: piece.cpp  piece.h
solver/piece_loader/: piece_loader.cpp  piece_loader.h
solver/piece_search/: piece_search.cpp  piece_search.h
solver/solver/: solver.cpp  solver.h
tests/: CMakeLists.txt  test_board.cpp  test_piece.cpp  test_piece_load.cpp  test_piece_search.cpp  test_scan_row.cpp  test_solve_board.cpp  test_spiral.cpp
